--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Keqin Wang"
-  avatar           : "profile.png"
+  avatar           : "IMG_3804.PNG"
   bio              : "Master of Mechanical Engineering, Carnegie Mellon University."
   location         : "Pittsburgh"
   employer         :
